[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boring-utils"
version = "0.0.8"
description = "Boring utils for from scratch implementation"
readme = "README.md"
authors = [
    { name = "Tim S", email = "jshen44@fordham.edu" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TimS-ML/Boring-Utils"
Repository = "https://github.com/TimS-ML/Boring-Utils"

[tool.setuptools]
packages = { find = {} }
